# motor_monitor

./: .gitignore  README.md  generate_proto.sh  hello.py  main.py  pyproject.toml
config/: backend.toml  config.toml  config.toml.template  frontend.toml
matlab/: DummyServer.m  MotorBit.m  udpserver.slx
model/: base.py  bit.py  config.py  net.py
motor_monitor_webui/: package-lock.json  package.json
motor_monitor_webui/src/: App.svelte  app.css  main.ts
motor_monitor_webui/src/assets/: config.json  config.json.template
motor_monitor_webui/src/components/: Chart.svelte  CurrentState.svelte  Main.svelte  Notify.svelte  Operation.svelte  State.svelte  Status.svelte
motor_monitor_webui/src/components/basic/: Progress.svelte  Slider.svelte  Toggle.svelte  ToolTip.svelte
motor_monitor_webui/src/lib/: Chart.svelte  Main.svelte  Notify.svelte  Operation.svelte  Sidebar.svelte  Slider.svelte  State.svelte  Status.svelte  Toggle.svelte  api.ts  icon.ts  message.ts  model.ts  utils.ts
motor_monitor_webui/src/lib/model/: base.ts  config.ts  net.ts  notify.ts  status.ts
motor_monitor_webui/src/store/: instance.ts  notify.ts  share.ts
proto/: base.py  bit.proto  bit.py  request.py
realtime/: UdpTestServer.m
router/: cc.py  qs.py
server/: udp.py  web.py
service/: config.py  logger.py  udp.py  web.py
test/: test_bit.py
tests/: test_bit.py
tools/: dummy_node.py  dummy_server.py  fake_motorbit.py
