[project]
name = "motor-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]
